# awesome_like_workspaces

./: CMakeLists.txt  README.md  hyprpm.toml
include/: project_vars.h.in
src/: main.cpp
